candle-einops-macros/tests/ui/fail/einsum-operand-count.stderr
error: einsum equation has 2 inputs but received 3 operand expressions
 --> tests/ui/fail/einsum-operand-count.rs:4:21
  |
4 |     let _ = einsum!("row, row -> row", (), (), ());
  |                     ^^^^^^^^^^^^^^^^^
